--- a/packages/platform/src/App.css
+++ b/packages/platform/src/App.css
@@ -1,6 +1,6 @@
 @import "./usj-nodes";
 @import "./editor/editor";
-@import "shared/styles/nodes-menu";
+@import "../../shared/src/styles/nodes-menu";
 
 @import "https://fonts.googleapis.com/css?family=Reenie+Beanie";
 
